# BF6EffectiveTTK.github.io

./: .gitignore  Attachment.cpp  Attachment.h  CMakeLists.txt  CNAME  README.md  Weapon.h  _config.yml
DATA/ATTACHMENTS/: EMPTY.json
DATA/ATTACHMENTS/ACCESSORY/: VIOLET LASER.json
DATA/ATTACHMENTS/AMMUNITION/: HOLLOW POINT.json  PENETRATION.json  SUBSONIC.json  SYNTHETIC TIP.json
DATA/ATTACHMENTS/BARREL/: CRYO BARREL.json  EXTENDED BARREL.json  HEAVY BARREL.json  HEAVY EXTENDED BARREL.json
DATA/ATTACHMENTS/UNDERBARREL/: 6H64 VERTICAL.json  RIBBED VERTICAL.json
DATA/WEAPONS/AR/: AK4D.json  B36A4.json  KORD 6P67.json  L85A3.json  M16A4.json  M433.json  NVO-228E.json  SOR-556 MK2.json  TR7.json  VCR-2.json
DATA/WEAPONS/CARBINE/: AK-205.json  GRT-BC.json  M277.json  M417 A2.json  M4A1.json  QBZ-192.json  SG 553R.json  SOR-300SC.json
DATA/WEAPONS/DMR/: GRT-CPS.json  LMR27.json  M39 EMR.json  SVDM.json  SVK-8.6.json
DATA/WEAPONS/LMG/: DRS-IAR.json  KTS100 MK8.json  L110.json  M121 A2.json  M123K.json  M240L.json  M250.json  M60.json  RPK-74M.json  RPKM.json
DATA/WEAPONS/SECONDARY/: ES 5.7.json  GGH-22.json  M357 Trait.json  M44.json  M45A1.json  P18.json  VZ. 61.json
DATA/WEAPONS/SMG/: CZ3A1.json  KV9.json  PW5A3.json  PW7A2.json  SCW-10.json  SGX.json  SL9.json  UMG-40.json  USG-90.json
